add background colors and changed the font color to contrast

--- a/home.html
+++ b/home.html
@@ -5,8 +5,9 @@
 		<meta name="photo" />
 		<meta name="blog" />
 		<meta name="diy" />
-	<body>
-		<h1 align=center style="background-color:DodgerBlue;"><i><b>DIY Home Organization Tips</b></i></h1>
-		<p style="border:2px solid Violet;">This is my first photo blog and this is a test of the paragraphs.</p>
+	</head>
+	<body style=background-color:Black>
+		<h1 align=center style="background-color:DodgerBlue;color:#FFFFFF"><i><b>DIY Home Organization Tips</b></i></h1>
+		<p style="border:2px solid Violet;color:#FFFFFF">This is my first photo-blog and this is a test of the paragraphs.</p>
 	<body>
 </html>
