add goals and overall idea of this project and why I am doing it.

--- a/home.html
+++ b/home.html
@@ -1,12 +1,12 @@
 <html>
-	<head>
+	<head style="background-color:Black;">
 	<title>DIY Home Ideas</title>
 		<meta name="photoblog" />
 		<meta name="photo" />
 		<meta name="blog" />
 		<meta name="diy" />
 	</head>
-	<body style=background-color:Black>
+	<body>
 		<h1 align=center style="background-color:DodgerBlue;color:#FFFFFF"><i><b>DIY Home Organization Tips</b></i></h1>
 		<p style="border:2px solid Violet;color:#FFFFFF">This is my first photo-blog and this is a test of the paragraphs.</p>
 	<body>
